...

        <variable
            name="loading"
            type="java.lang.Boolean" />

        <variable
            name="error"
            type="java.lang.Boolean" />

    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...
